==> wagiminator/Development-Boards/CH32V003A4M6_DevBoard/software/flash_test/include/system.c <==
#include "system.h"

void SYS_init(void) {
  // Init system clock
  #if SYS_CLK_INIT > 0
  CLK_init();
  #endif

  // Init SYSTICK
  #if SYS_TICK_INIT > 0
  STK_init();
  #endif

  // Enable GPIO
  #if SYS_GPIO_EN > 0
  RCC->APB2PCENR |= RCC_IOPAEN | RCC_IOPCEN | RCC_IOPDEN;
  #endif
}

void CLK_init_HSI(void) {
  FLASH->ACTLR  = FLASH_ACTLR_LATENCY_0;                        // 0 cycle latency
  RCC->INTR     = 0x009F0000;                                   // clear ready flags
  RCC->CFGR0    = CLK_DIV;                                      // set clock divider
  RCC->CTLR     = RCC_HSION | ((HSITRIM) << 3);                 // use HSI, Only
}

void CLK_init_HSI_PLL(void) {
  FLASH->ACTLR  = FLASH_ACTLR_LATENCY_1;                        // 1 cycle latency
  RCC->INTR     = 0x009F0000;                                   // clear ready flags
  RCC->CFGR0    = CLK_DIV | RCC_PLLSRC_HSI_Mul2;                // set PLL and clock divider
  RCC->CTLR     = RCC_HSION | RCC_PLLON | ((HSITRIM) << 3);     // use HSI, but enable PLL
  while(!(RCC->CTLR & RCC_PLLRDY));                             // wait till PLL is ready
  RCC->CFGR0 = (RCC->CFGR0 & ~(RCC_SW)) | RCC_SW_PLL;           // select PLL as system clock source
  while((RCC->CFGR0 & RCC_SWS) != RCC_SWS_PLL);                 // wait till PLL is used as system clock source
}

void CLK_init_HSE(void) {
  RCC->APB2PCENR |= RCC_AFIOEN;                                 // enable auxiliary clock module
  AFIO->PCFR1    |= AFIO_PCFR1_PA12_REMAP;                      // pins PA1-PA2 for external crystal
  FLASH->ACTLR    = FLASH_ACTLR_LATENCY_0;                      // 0 cycle latency
  RCC->CTLR       = RCC_HSION | RCC_HSEON | RCC_PLLON;          // enable HSE and keep HSI+PLL on
  while(!(RCC->CTLR & RCC_HSERDY));                             // wait till HSE is ready
  RCC->CFGR0      = RCC_HPRE_DIV1 | RCC_SW_HSE;                 // HCLK = SYSCLK = APB1 and use HSE for system clock
  while((RCC->CFGR0 & RCC_SWS) != RCC_SWS_HSE);                 // wait till HSE is used as system clock source
  RCC->CTLR       = RCC_HSEON;                                  // turn off HSI + PLL.
}

void CLK_init_HSE_PLL(void) {
  RCC->APB2PCENR |= RCC_AFIOEN;                                 // enable auxiliary clock module
  AFIO->PCFR1    |= AFIO_PCFR1_PA12_REMAP;                      // pins PA1-PA2 for external crystal
  RCC->CTLR       = RCC_HSION | RCC_HSEON | RCC_PLLON;          // enable HSE and keep HSI+PLL on
  while(!(RCC->CTLR & RCC_HSERDY));                             // wait till HSE is ready
  RCC->CFGR0      = RCC_SW_HSE | RCC_HPRE_DIV1;                 // HCLK = SYSCLK = APB1 and use HSE for system clock
  FLASH->ACTLR    = FLASH_ACTLR_LATENCY_1;                      // 1 cycle latency
  RCC->CTLR       = RCC_HSEON;                                  // turn off PLL and HSI
  RCC->CFGR0      = RCC_SW_HSE | RCC_HPRE_DIV1 | RCC_PLLSRC_HSE_Mul2; // use PLL with HSE
  RCC->CTLR       = RCC_HSEON | RCC_PLLON;                      // turn PLL back on..
  while(!(RCC->CTLR & RCC_PLLRDY));                             // wait till PLL is ready
  RCC->CFGR0 = RCC_SW_PLL | RCC_HPRE_DIV1 | RCC_PLLSRC_HSE_Mul2;// select PLL as system clock source
  while((RCC->CFGR0 & RCC_SWS) != RCC_SWS_PLL);                 // wait till PLL is used as system clock source
}

void DLY_ticks(uint32_t n) {
  uint32_t end = STK->CNT + n;
  while(((int32_t)(STK->CNT - end)) < 0);
}

void STDBY_WFI_now(void) {
  PWR->CTLR   |= PWR_CTLR_PDDS;         // set power-down mode to standby (deep sleep)
  PFIC->SCTLR |= PFIC_SLEEPDEEP;        // set deep sleep mode
  __WFI();                              // wait for interrupt
  PFIC->SCTLR &= ~PFIC_SLEEPDEEP;       // unset deep sleep mode
}

void STDBY_WFE_now(void) {
  PWR->CTLR   |= PWR_CTLR_PDDS;         // set power-down mode to standby (deep sleep)
  PFIC->SCTLR |= PFIC_SLEEPDEEP;        // set deep sleep mode
  __WFE();                              // wait for event
  PFIC->SCTLR &= ~PFIC_SLEEPDEEP;       // unset deep sleep mode
}

void reset_handler(void) {
  uint32_t *src, *dst;
  
  // Set pointers, vectors, processor status, and interrupts
  asm volatile(
  " la gp, __global_pointer$  \n\
    la sp, _eusrstack         \n\
    li a0, 0x80               \n\
    csrw mstatus, a0          \n\
    li a1, 0x3                \n\
    csrw 0x804, a1            \n\
    la a0, jump_reset         \n\
    or a0, a0, a1             \n\
    csrw mtvec, a0            \n\
    csrw mepc, %[main]        \n"
    : : [main] "r" (main) : "a0", "a1" , "memory"
  );

  // Copy data from FLASH to RAM
  src = &_data_lma;
  dst = &_data_vma;
  while(dst < &_edata) *dst++ = *src++;

  // Clear uninitialized variables
  dst = &_sbss;
  while(dst < &_ebss) *dst++ = 0;

  // C++ Support
  #ifdef __cplusplus
  __libc_init_array();
  #endif

  // Init system
  SYS_init();

  // Return
  asm volatile("mret");
}
