==> wagiminator/Development-Boards/STM32F030F4P6_DevBoard/software/stm32l010/serial/include/system.c <==
#include "system.h"

void SYS_init(void) {
  // Init system clock
  #if SYS_CLK_INIT > 0
  #if F_CPU > 16000000
  FLASH->ACR |= FLASH_ACR_LATENCY;          // FLASH latency: one wait state
  while(!(FLASH->ACR & FLASH_ACR_LATENCY)); // wait until applied
  #endif
  CLK_init();                               // Init clock according to settings
  #endif

  // Init SYSTICK
  #if SYS_TICK_INIT > 0
  SysTick->CTRL = SysTick_CTRL_ENABLE | SysTick_CTRL_CLKSOURCE;
  #endif

  // Enable GPIO A-C
  #if SYS_GPIO_EN > 0
  RCC->IOPENR = RCC_IOPENR_GPIOAEN | RCC_IOPENR_GPIOBEN | RCC_IOPENR_GPIOCEN;
  #endif
}

void CLK_init_HSI(void) {
  RCC->CR = RCC_CR_MSION                                  // keep MSI on
          | RCC_CR_HSION                                  // enable HSI
          | CLK_HSI_DIV;                                  // set HSI divider
  while(!(RCC->CR & RCC_CR_HSIRDY));                      // wait for HSI ready
  RCC->CFGR = 0b01;                                       // HSI as system clock source
  while((RCC->CFGR & RCC_CFGR_SWS_Msk) != (0b01<<2));     // wait until switched to HSI
  RCC->CFGR |= RCC_CFGR_STOPWUCK;                         // HSI for wake-up from STOP
}

void CLK_init_HSI_PLL(void) {
  RCC->CR = RCC_CR_MSION                                  // keep MSI on
          | RCC_CR_HSION;                                 // enable HSI
  while(!(RCC->CR & RCC_CR_HSIRDY));                      // wait for HSI ready
  RCC->CFGR = CLK_PLL_MUL | CLK_PLL_DIV;                  // set PLL factor and divider
  RCC->CR |= RCC_CR_PLLON;                                // enable PLL
  while(!(RCC->CR & RCC_CR_PLLRDY));                      // wait for PLL ready    
  RCC->CFGR |= 0b11;                                      // PLL as system clock source
  while((RCC->CFGR & RCC_CFGR_SWS_Msk) != (0b11<<2));     // wait until switched to PLL
  RCC->CFGR |= RCC_CFGR_STOPWUCK;                         // HSI for wake-up from STOP
}

void CLK_init_HSE(void) {
  RCC->CR = RCC_CR_MSION                                  // keep MSI on
          | RCC_CR_HSEON;                                 // enable HSE
  while(!(RCC->CR & RCC_CR_HSERDY));                      // wait for HSE ready
  RCC->CFGR = 0b10;                                       // HSE as system clock source
  while((RCC->CFGR & RCC_CFGR_SWS_Msk) != (0b10<<2));     // wait until switched to HSE
}

void CLK_init_HSE_PLL(void) {
  RCC->CR = RCC_CR_MSION                                  // keep MSI on
          | RCC_CR_HSEON;                                 // enable HSE
  while(!(RCC->CR & RCC_CR_HSERDY));                      // wait for HSE ready
  RCC->CFGR = CLK_PLL_MUL | CLK_PLL_DIV                   // set PLL factor and divider
            | RCC_CFGR_PLLSRC;                            // set HSE as PLL source
  RCC->CR |= RCC_CR_PLLON;                                // enable PLL
  while(!(RCC->CR & RCC_CR_PLLRDY));                      // wait for PLL ready    
  RCC->CFGR |= 0b11;                                      // PLL as system clock source
  while((RCC->CFGR & RCC_CFGR_SWS_Msk) != (0b11<<2));     // wait until switched to PLL
}

void DLY_ticks(uint32_t n) {
  SysTick->LOAD = n;
  SysTick->VAL  = 0;
  while(!(SysTick->CTRL & SysTick_CTRL_COUNTFLAG));
}

void STDBY_WFI_now(void) {
  RCC->APB1ENR |= RCC_APB1ENR_PWREN;    // enable low power control block clock
  SCB->SCR |= SCB_SCR_SLEEPDEEP_Msk;    // set deep sleep mode
  NVIC->ICPR[0] = 0xffffffff;           // clear pending interrupts
  PWR->CR |= PWR_CR_PDDS                // select STANDBY mode
           | PWR_CR_CWUF;               // clear wakup flag
  RTC->ISR &= ~((uint32_t)0xff<<8);     // clear RTC interrupt flags
  __WFI();                              // wait for interrupt
  SCB->SCR &= ~SCB_SCR_SLEEPDEEP_Msk;   // unset deep sleep mode
  RCC->APB1ENR &=~ RCC_APB1ENR_PWREN;   // disable low power control block clock
}

void STDBY_WFE_now(void) {
  RCC->APB1ENR |= RCC_APB1ENR_PWREN;    // enable low power control block clock
  SCB->SCR |= SCB_SCR_SLEEPDEEP_Msk;    // set deep sleep mode
  NVIC->ICPR[0] = 0xffffffff;           // clear pending interrupts
  EXTI->PR = 0xffffffff;                // clear all EXTI pending flags
  PWR->CR |= PWR_CR_PDDS                // select STANDBY mode
           | PWR_CR_CWUF;               // clear wakup flag
  RTC->ISR &= ~((uint32_t)0xff<<8);     // clear RTC interrupt flags
  __WFE();                              // wait for event
  SCB->SCR &= ~SCB_SCR_SLEEPDEEP_Msk;   // unset deep sleep mode
  RCC->APB1ENR &=~ RCC_APB1ENR_PWREN;   // disable low power control block clock
}

void Reset_Handler(void) {
  uint32_t *src, *dst;

  // Set stack pointer
  asm volatile(
  " ldr r0, =_estack  \n\
    mov sp, r0        \n"
  : : : "r0", "memory");

  // Configure vector table location
  SCB->VTOR = (uint32_t)vectors;

  // Init system
  SYS_init();

  // Check if boot space corresponds to system memory
  if(((*(uint32_t*)0x00000004) >> 24) == 0x1f) {
    RCC->APB2ENR  = RCC_APB2ENR_SYSCFGEN;
    SYSCFG->CFGR1 = (uint32_t)0;
  }

  // Copy data from FLASH to RAM
  src = &_sidata;
  dst = &_sdata;
  while(dst < &_edata) *dst++ = *src++;

  // Clear uninitialized variables
  #if SYS_CLEAR_BSS > 0
  dst = &_sbss;
  while(dst < &_ebss) *dst++ = 0;
  #endif

  // C++ Support
  #ifdef __cplusplus
  __libc_init_array();
  #endif

  // Start main function
  main();
  while(1);
}
